[package]
name = "socket-server"
version = "0.1.0"
authors = ["Mike"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
lazy_static = "1.4.0"
ring = "0.16.9"
chrono = "0.4"
md5 = "0.7.0"

[dependencies.rusqlite]
rusqlite = "0.23.1"
features = ["bundled"]